# bughunter-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_subdomains.txt
.github/workflows/: ci.yml.disabled
examples/: vulnerable_example.py
scripts/: install.sh
src/bughunter/: __init__.py  cli.py  core.py  discover.py  models.py  scanner.py
src/bughunter/ai/: analyzer.py
src/bughunter/analyzers/: patterns.py  secrets.py  static.py
src/bughunter/core/: cloud.py  crawler.py  dir_hunter.py  engine.py  entropy.py  fuzzer.py  port_scanner.py  reporter.py  subdomains.py  templates.py  validator.py  vuln_engine.py
src/bughunter/reporters/: __init__.py
src/bughunter/utils/: config_manager.py  display.py  file_collector.py  fp_filter.py  interactive.py
tests/: test_core.py
