[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bughunter-ai"
version = "3.5.0"
description = "AI-Powered Security Bug Hunter — Free Penligent Alternative"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "BugHunter AI Contributors" }
]
keywords = ["security", "bug-hunting", "ai", "vulnerability", "pentest", "kali"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "anyio>=4.2.0",
    "tree-sitter>=0.21.0",
    "gitpython>=3.1.40",
    "jinja2>=3.1.2",
    "click>=8.1.7",
    "pygments>=2.17.2",
    "pathspec>=0.12.1",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.12.0"]
anthropic = ["anthropic>=0.18.0"]
ollama = ["ollama>=0.1.8"]
all = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.8",
    "bandit>=1.7.7",
    "semgrep>=1.55.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
bughunter = "bughunter.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/bughunter-ai"
Repository = "https://github.com/YOUR_USERNAME/bughunter-ai"
Issues = "https://github.com/YOUR_USERNAME/bughunter-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bughunter"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.5.0"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
